@@ -42,6 +42,7 @@ url="http://www.gnome.org">GNOME</ulink> project, of which libxml++ is a part.</
     # apt-get install libxml++2.6-dev libxml++2.6-doc
     </programlisting>
     </para>
+    <para>To check that you have the libxml++ development packages installed, and that your environment is working properly, try <command>pkg-config libxml++-2.6 --modversion</command>.</para>
     <para>The source code may be downloaded from <ulink
 url="http://libxmlplusplus.sourceforge.net">libxmlplusplus.sourceforge.net</ulink>
 . libxml++ is licensed under the LGPL, which allows its use via dynamic linking in both open source and closed-source software. The underlying libxml library uses the even more generous MIT licence.</para>
@@ -53,6 +54,20 @@ url="http://libxmlplusplus.sourceforge.net">libxmlplusplus.sourceforge.net</ulin
     <para>Because Standard C++ has no string class that can fully handle UTF-8, libxml++ uses the Glib::ustring class from the glibmm library. Glib::ustring has almost exactly the same API as std::string, but methods such as length() and operator[] deal with whole UTF-8 characters rather than raw bytes.</para>
     <para>There are implicit conversions between std::string and Glib::ustring, so you can use std::string wherever you see a Glib::ustring in the API, if you really don't care about any locale other than English. However, that is unlikely in today's connected world.</para>
     <para>glibmm also provides useful API to convert between encodings and locales.</para>
+    </sect2>
+
+    <sect2>
+    <title>Compilation and Linking</title>
+    <para>To use libxml++ in your application, you must tell the compiler where to find the include headers and where to find the libxml++ library. libxml++ provides a pkg-config .pc file to make this easy. For instance, the following command will provide the necessary compiler options:
+    <command>pkg-config libxml++-2.6 --cflags --libs</command>
+    </para>
+    <para>When using autoconf and automake, this is even easier with the PKG_CONFIG_CHECK macro in your configure.ac file. For instance:
+    <programlisting>
+    PKG_CHECK_MODULES(SOMEAPP, libxml++-2.6 >= 2.10.0)
+    AC_SUBST(SOMEAPP_CFLAGS)
+    AC_SUBST(SOMEAPP_LIBS)
+    </programlisting>
+    </para>
     </sect2>
  
     </sect1>
@@ -95,7 +110,7 @@ url="http://libxmlplusplus.sourceforge.net">libxmlplusplus.sourceforge.net</ulin
 
 <sect3>
 <title>Example</title>
-<para>This example looks in the document for expected elements and then examines them.</para>
+<para>This example looks in the document for expected elements and then examines them. All these examples are included in the libxml++ source distribution.</para>
 <para><ulink url="&url_examples_base;dom_parser">Source Code</ulink></para>
 </sect3>
 
